--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
     "@apollo/server": "^5.4.0",
     "@as-integrations/express5": "^1.1.2",
     "@nestjs/apollo": "^13.2.4",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-express": "^11.0.1",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
+    "axios": "^1.13.5",
     "bullmq": "^5.69.3",
     "graphql": "^16.12.0",
+    "nest-winston": "^1.10.2",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tarantool-driver": "^3.1.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
